<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">简易涂鸭板</string>
	<string name="width_1">1像素</string>
	<string name="width_2">5像素</string>
	<string name="width_3">10像素</string>
	<string name="color_red">红色</string>
	<string name="color_green">绿色</string>
	<string name="color_blue">蓝色</string>
	<string name="color">画笔颜色</string>
	<string name="width">画笔宽度</string>
	<string name="clear">擦除绘画</string>
	<string name="save">保存绘画</string>
</resources>
